EBE-75 FavoriteController Tests - The coverage of GameController tests by 100% - The coverage of FavoriteController tests by 80% - Code optimization